# sagittarius-a-api

./: .gitignore  Cargo.toml  Dockerfile  Jenkinsfile  build.sh
sagittarius-a-controller/: Cargo.toml
sagittarius-a-controller/src/: itemcompracontroller.rs  lib.rs  matchcontroller.rs  playerachievementcontroller.rs  splinefigurecontroller.rs  usercontroller.rs
sagittarius-a-main/: Cargo.toml
sagittarius-a-main/src/: main.rs
sagittarius-a-model/: Cargo.toml
sagittarius-a-model/src/: gamemodel.rs  itemcompramodel.rs  lib.rs  matchmodel.rs  playerachievement.rs  splinefigure.rs  usermodel.rs
sagittarius-a-service/: Cargo.toml
sagittarius-a-service/src/: itemcompraservice.rs  lib.rs  matchservice.rs  playerachievementservice.rs  splinefigureservice.rs  userservice.rs
sagittarius-a-test/: Cargo.toml
sagittarius-a-test/src/: main.rs
sagittarius-a-test/src/unit/: mod.rs
sagittarius-a-test/src/unit/helperstest/: helpers.rs
sagittarius-a-utils/: Cargo.toml
sagittarius-a-utils/src/helpers/: access_controll_helper.rs  aws_helper.rs  email_helper.rs  encryption_helper.rs  error_helper.rs  jwt_helper.rs  message_helper.rs  mod.rs  response_helper.rs
