[package]
name = "sagittarius-a-controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sagittarius_a_controller"
path = "src/lib.rs"

[dependencies]
sagittarius-a-model ={ path = "../sagittarius-a-model"}
sagittarius-a-service ={ path = "../sagittarius-a-service"}
sagittarius-a-utils = { path = "../sagittarius-a-utils"}

serde = "1.0.148"
serde_json = "1.0.89"
serde_derive = "1.0.147"
uuid = { version = "1.2.2", features = ["v4"] }
chrono = "0.4.23"
