[package]
name = "sagittarius-a-main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sagittarius-a-model ={ path = "../sagittarius-a-model"}
sagittarius-a-controller ={ path = "../sagittarius-a-controller"}
sagittarius-a-utils ={ path = "../sagittarius-a-utils"}

tokio = { version = "1.22.0", features = ["full"] }
tokio-stream = "0.1.11"
lambda_runtime = "0.8.1"
serde = "1.0.148"
serde_json = "1.0.89"
serde_derive = "1.0.147"
log = "0.4.17"
simple_logger = "4.0.0"
uuid = { version = "1.2.2", features = ["v4"] }
