[package]
name = "sagittarius-a-model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sagittarius_a_model"
path = "src/lib.rs"

[dependencies]
serde = "1.0.148"
serde_json = "1.0.89"
serde_derive = "1.0.148"
uuid = { version = "1.2.2", features = ["v4"] }
