[package]
name = "sagittarius-a-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sagittarius_a_utils"
path = "src/lib.rs"

[dependencies]
sagittarius-a-model ={ path = "../sagittarius-a-model"}

aws-config = "0.51.0"
aws-sdk-dynamodb = "0.21.0"
aws-sdk-sesv2 = "0.21.0"
serde = "1.0.147"
serde_json = "1.0.89"
serde_derive = "1.0.148"
chrono = "0.4.23"
jwt = "0.16.0"
sha2 = "0.10.6"
hmac = "0.12.1"
data-encoding = "2.3.2"
ring = "0.16.20"